--- a/packages/vuesax/package.json
+++ b/packages/vuesax/package.json
@@ -66,8 +66,8 @@
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.6.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.1.0",
+    "vue": "2.6.12",
+    "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^8.2.2",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
